Added HAdoop into Centos provisioning
1. refs #669