@@ -145,32 +145,33 @@ EOT
     fi
     sudo chmod 777 /var/lib/hootenanny/tmp
 
-    # Update the db password in hoot-services war
-    source /var/lib/hootenanny/conf/DatabaseConfig.sh
-    while [ ! -f /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/spring-database.xml ]; do
-        echo "Waiting for hoot-services.war to deploy"
-        sleep 1
-    done
-    sudo sed -i s/password\:\ hoottest/password\:\ $DB_PASSWORD/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/liquibase.properties
-    sudo sed -i s/value=\"hoottest\"/value=\"$DB_PASSWORD\"/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/spring-database.xml
-    sudo sed -i s/dbPassword=hoottest/dbPassword=$DB_PASSWORD/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/conf/hoot-services.conf
-    sudo sed -i s/\<Password\>hoottest\<\\/Password\>/\<Password\>$DB_PASSWORD\<\\/Password\>/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/workspace/jdbc/WFS_Connection.xml
-    sudo sed -i s/\<jdbcPassword\>hoottest\<\\/jdbcPassword\>/\<jdbcPassword\>$DB_PASSWORD\<\\/jdbcPassword\>/ /var/lib/tomcat6/webapps/hoot-services/META-INF/maven/hoot/hoot-services/pom.xml
 
-    sudo service tomcat6 restart
-
-    # Apply any database schema changes
-    cd $TOMCAT_HOME/webapps/hoot-services/WEB-INF
-    liquibase --contexts=default,production \
-        --changeLogFile=classes/db/db.changelog-master.xml \
-        --promptForNonLocalDatabase=false \
-        --driver=org.postgresql.Driver \
-        --url=jdbc:postgresql:$DB_NAME \
-        --username=$DB_USER \
-        --password=$DB_PASSWORD \
-        --logLevel=warning \
-        --classpath=lib/postgresql-9.1-901-1.jdbc4.jar \
-        update
+#     # Update the db password in hoot-services war
+#     source /var/lib/hootenanny/conf/DatabaseConfig.sh
+#     while [ ! -f /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/spring-database.xml ]; do
+#         echo "Waiting for hoot-services.war to deploy"
+#         sleep 1
+#     done
+#     sudo sed -i s/password\:\ hoottest/password\:\ $DB_PASSWORD/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/liquibase.properties
+#     sudo sed -i s/value=\"hoottest\"/value=\"$DB_PASSWORD\"/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/db/spring-database.xml
+#     sudo sed -i s/dbPassword=hoottest/dbPassword=$DB_PASSWORD/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/classes/conf/hoot-services.conf
+#     sudo sed -i s/\<Password\>hoottest\<\\/Password\>/\<Password\>$DB_PASSWORD\<\\/Password\>/ /var/lib/tomcat6/webapps/hoot-services/WEB-INF/workspace/jdbc/WFS_Connection.xml
+#     sudo sed -i s/\<jdbcPassword\>hoottest\<\\/jdbcPassword\>/\<jdbcPassword\>$DB_PASSWORD\<\\/jdbcPassword\>/ /var/lib/tomcat6/webapps/hoot-services/META-INF/maven/hoot/hoot-services/pom.xml
+#
+#     sudo service tomcat6 restart
+#
+#     # Apply any database schema changes
+#     cd $TOMCAT_HOME/webapps/hoot-services/WEB-INF
+#     liquibase --contexts=default,production \
+#         --changeLogFile=classes/db/db.changelog-master.xml \
+#         --promptForNonLocalDatabase=false \
+#         --driver=org.postgresql.Driver \
+#         --url=jdbc:postgresql:$DB_NAME \
+#         --username=$DB_USER \
+#         --password=$DB_PASSWORD \
+#         --logLevel=warning \
+#         --classpath=lib/postgresql-9.1-901-1.jdbc4.jar \
+#         update
 
     # Configuring firewall
     if ! sudo iptables --list-rules | grep -i --quiet 'dport 80'; then
@@ -207,7 +208,7 @@ fi
 
 if ! grep --quiet "export JAVA_HOME" ~/.bash_profile; then
     echo "Adding Java home to profile..."
-    echo "export JAVA_HOME=/etc/alternatives/jre_1.7.0" >> ~/.bash_profile
+    echo "export JAVA_HOME=/etc/alternatives/jre_1.8.0" >> ~/.bash_profile
     source ~/.bash_profile
 fi
 
@@ -225,54 +226,19 @@ if ! grep --quiet "\$HOME/bin" ~/.bash_profile; then
     source ~/.bash_profile
 fi
 
-
-
-
-exit
-#######################################################################
-
-
-# set Postgres to autostart
-export PG_VERSION=$(sudo -u postgres psql -c 'SHOW SERVER_VERSION;' | egrep -o '[0-9]{1,}\.[0-9]{1,}')
-sudo /sbin/chkconfig --add postgresql-$PG_VERSION
-sudo /sbin/chkconfig postgresql-$PG_VERSION on
-# set Tomcat to autostart
-sudo /sbin/chkconfig --add tomcat6
-sudo /sbin/chkconfig tomcat6 on
-# set NodeJS node-mapnik-server to autostart
-sudo /sbin/chkconfig --add node-mapnik-server
-sudo /sbin/chkconfig node-mapnik-server on
-
-##### End from Hoot RPM Spec file
-
-# Add some stuff to get development going
-# if ! dpkg -l | grep --quiet dictionaries-common; then
-#     # See /usr/share/doc/dictionaries-common/README.problems for details
-#     # http://www.linuxquestions.org/questions/debian-26/dpkg-error-processing-dictionaries-common-4175451951/
-#     sudo apt-get -q -y install dictionaries-common >> Ubuntu_upgrade.txt 2>&1
-#
-#     sudo /usr/share/debconf/fix_db.pl
-#
-#     sudo apt-get -q -y install wamerican-insane >> Ubuntu_upgrade.txt 2>&1
-#
-#     sudo /usr/share/debconf/fix_db.pl
-#     sudo dpkg-reconfigure -f noninteractive dictionaries-common
-# fi
-#
-
 # Make sure that we are in ~ before trying to wget & install stuff
 cd ~
 
-if [ ! -f bin/osmosis ]; then
-    echo "### Installing Osmosis"
-    mkdir -p $HOME/bin
-    if [ ! -f osmosis-latest.tgz ]; then
-      wget --quiet http://bretth.dev.openstreetmap.org/osmosis-build/osmosis-latest.tgz
-    fi
-    mkdir -p $HOME/bin/osmosis_src
-    tar -zxf osmosis-latest.tgz -C $HOME/bin/osmosis_src
-    ln -s $HOME/bin/osmosis_src/bin/osmosis $HOME/bin/osmosis
-fi
+# if [ ! -f bin/osmosis ]; then
+#     echo "### Installing Osmosis"
+#     mkdir -p $HOME/bin
+#     if [ ! -f osmosis-latest.tgz ]; then
+#       wget --quiet http://bretth.dev.openstreetmap.org/osmosis-build/osmosis-latest.tgz
+#     fi
+#     mkdir -p $HOME/bin/osmosis_src
+#     tar -zxf osmosis-latest.tgz -C $HOME/bin/osmosis_src
+#     ln -s $HOME/bin/osmosis_src/bin/osmosis $HOME/bin/osmosis
+# fi
 
 ##### Start Hadoop #####
 # hoot has only been tested successfully with hadoop 0.20.2, which is not available from public repos,
@@ -406,7 +372,7 @@ sudo bash -c "cat >> /home/vagrant/hadoop/conf/hdfs-site.xml" <<EOT
 </configuration>
 EOT
 
-  sudo sed -i.bak 's/# export JAVA_HOME=\/usr\/lib\/j2sdk1.5-sun/export JAVA_HOME=\/usr\/lib\/jvm\/java-1.7.0-openjdk.x86_64/g' $HADOOP_HOME/conf/hadoop-env.sh
+  sudo sed -i.bak 's/# export JAVA_HOME=\/usr\/lib\/j2sdk1.5-sun/export JAVA_HOME=\/usr\/lib\/jvm\/java-1.8.0-openjdk-1.8.0.91-1.b14.el6.x86_64/g' $HADOOP_HOME/conf/hadoop-env.sh
   sudo sed -i.bak 's/#include <pthread.h>/#include <pthread.h>\n#include <unistd.h>/g' $HADOOP_HOME/src/c++/pipes/impl/HadoopPipes.cc
 
   sudo mkdir -p $HOME/hadoop/dfs/name/current
@@ -420,10 +386,10 @@ EOT
   sudo ln -s $JAVA_HOME/jre/lib/amd64/server/libjvm.so libjvm.so
   cd ~
 
-  echo '1' | sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-1.7.0-openjdk.x86_64/bin/java 1
-  echo '1' | sudo update-alternatives --config java
-  echo '1' | sudo update-alternatives --install "/usr/bin/javac" "javac" "$JAVA_HOME/bin/javac" 1
-  echo '1' | sudo update-alternatives --config javac
+#  echo '1' | sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-1.7.0-openjdk.x86_64/bin/java 1
+#  echo '1' | sudo update-alternatives --config java
+#  echo '1' | sudo update-alternatives --install "/usr/bin/javac" "javac" "$JAVA_HOME/bin/javac" 1
+#  echo '1' | sudo update-alternatives --config javac
 
   # test hadoop out
   #stop-all.sh
@@ -435,127 +401,15 @@ fi
 cd ~
 ##### End Hadoop #####
 
-exit
-
-
-
-cd $HOOT_HOME
-source ./SetupEnv.sh
-
-if [ ! "$(ls -A hoot-ui)" ]; then
-    echo "hoot-ui is empty"
-    echo "init'ing and updating submodule"
-    git submodule init && git submodule update
-fi
-
-
-# Configure Tomcat
-if ! grep --quiet TOMCAT6_HOME ~/.bash_profile; then
-    echo "### Adding Tomcat to profile..."
-    echo "export TOMCAT6_HOME=/usr/share/tomcat6" >> ~/.bash_profile
-    source ~/.bash_profile
-fi
-
-# Add tomcat6 and vagrant to each others groups so we can get the group write working with nfs
-if ! groups vagrant | grep --quiet '\btomcat\b'; then
-    echo "Adding vagrant user to tomcat6 user group..."
-    sudo usermod -a -G tomcat vagrant
-fi
-if ! groups tomcat | grep --quiet "\bvagrant\b"; then
-    echo "Adding tomcat6 user to vagrant user group..."
-    sudo usermod -a -G vagrant tomcat
-fi
-
-if ! grep -i --quiet HOOT /etc/default/tomcat6; then
-echo "Configuring tomcat6 environment..."
-# This echo properly substitutes the home path dir and keeps it from having to be hardcoded, but
-# fails on permissions during write...so hardcoding the home path here instead for now.  This
-# hardcode needs to be removed in order for hoot dev env install script to work correctly.
-#
-#sudo echo "#--------------
-# Hoot Settings
-#--------------
-#HOOT_HOME=\$HOOT_HOME/hoot" >> /etc/default/tomcat6
-
-sudo bash -c "cat >> /etc/default/tomcat6" <<EOT
-
-#--------------
-# Hoot Settings
-#--------------
-HOOT_HOME=/home/vagrant/hoot
-HADOOP_HOME=/home/vagrant/hadoop
-LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib:$HOOT_HOME/lib:$HOOT_HOME/pretty-pipes/lib
-GDAL_DATA=/usr/local/share/gdal
-GDAL_LIB_DIR=/usr/local/lib
-HOOT_WORKING_NAME=hoot
-PATH=$HOOT_HOME/bin:$PATH
-EOT
-fi
-
-# Trying this to try to get rid of errors
-sudo mkdir -p /usr/share/tomcat6/server/classes
-sudo mkdir -p /usr/share/tomcat6/shared/classes
-sudo chown -R tomcat:tomcat /usr/share/tomcat6/server
-sudo chown -R tomcat:tomcat /usr/share/tomcat6/shared
-
-# Can change it to 000 to get rid of errors
-if ! grep -i --quiet 'umask 002' /etc/default/tomcat6; then
-echo "### Changing Tomcat umask to group write..."
-sudo bash -c "cat >> /etc/default/tomcat6" <<EOT
-# Set tomcat6 umask to group write because all files in shared folder are owned by vagrant
-umask 002
-EOT
-fi
-
-if grep -i --quiet '^JAVA_OPTS=.*\-Xmx128m' /etc/default/tomcat6; then
-    echo "### Changing Tomcat java opts..."
-    sudo sed -i.bak "s@\-Xmx128m@\-Xms512m \-Xmx2048m \-XX:PermSize=512m \-XX:MaxPermSize=4096m@" /etc/default/tomcat6
-fi
-
-if grep -i --quiet 'gdal/1.10' /etc/default/tomcat6; then
-    echo "### Fixing Tomcat GDAL_DATA env var path..."
-    sudo sed -i.bak s@^GDAL_DATA=.*@GDAL_DATA=\/usr\/local\/share\/gdal@ /etc/default/tomcat6
-fi
-
-if ! grep -i --quiet 'ingest/processed' /etc/tomcat6/server.xml; then
-    echo "Adding Tomcat context path for tile images..."
-    sudo sed -i.bak 's@<\/Host>@  <Context docBase=\"'"$HOOT_HOME"'\/ingest\/processed\" path=\"\/static\" \/>\n      &@' /etc/tomcat6/server.xml
-fi
-
-if ! grep -i --quiet 'allowLinking="true"' /etc/tomcat6/context.xml; then
-    echo "Set allowLinking to true in Tomcat context..."
-    sudo sed -i.bak "s@^<Context>@<Context allowLinking=\"true\">@" /etc/tomcat6/context.xml
-fi
-
-if [ ! -d /usr/share/tomcat6/.deegree ]; then
-    echo "Creating deegree directory for webapp..."
-    sudo mkdir /usr/share/tomcat6/.deegree
-    sudo chown tomcat6:tomcat6 /usr/share/tomcat6/.deegree
-fi
-
-
-
 # Clean out tomcat logfile. We restart tomcat after provisioning
 sudo service tomcat6 stop
 sudo rm /var/log/tomcat6/catalina.out
 
-cd ~
-
-
-
-# Clean up after the npm install
-rm -rf $HOME/tmp
-
 cd $HOOT_HOME
 
-rm -rf $HOOT_HOME/ingest
-mkdir -p $HOOT_HOME/ingest/processed
+# rm -rf $HOOT_HOME/ingest
+# mkdir -p $HOOT_HOME/ingest/processed
+#
+# rm -rf $HOOT_HOME/upload
+# mkdir -p $HOOT_HOME/upload
 
-rm -rf $HOOT_HOME/upload
-mkdir -p $HOOT_HOME/upload
-
-# Update marker file date now that dependency and config stuff has run
-# The make command will exit and provide a warning to run 'vagrant provision'
-# if the marker file is older than this file (VagrantProvision.sh)
-#touch Vagrant.marker
-# Now we are ready to build Hoot.  The VagrantBuild.sh script will build Hoot.
